fixed spacing on about page and changed styles of users page

--- a/app/about/AboutPage.module.scss
+++ b/app/about/AboutPage.module.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  padding: 0 25% 0 25%;
 }
 
 .heading {
@@ -15,7 +14,7 @@
 }
 
 .description {
-  text-align: center;
+  text-align: left;
   font-size: 1.2rem;
   font-weight: 400;
   margin: 1rem;
