--- a/app/users/Users.module.scss
+++ b/app/users/Users.module.scss
@@ -12,10 +12,14 @@
   padding: 0;
 
   li {
+    background: #050607;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.27);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
     padding: 10px;
     list-style: none;
     margin-bottom: 1rem;
-    background: #2b2d2e94;
     border-radius: 20px;
 
     transition: all 0.2s ease-in-out;
